Archive2/f1/463c1bbd504a90/output
main.cpp: In instantiation of 'void func(A, Types ...) [with A = int; Types = {}]':
main.cpp:12:17:   recursively required from 'void func(A, Types ...) [with A = std::tuple<const char*>; Types = {int}]'
main.cpp:12:17:   required from 'void func(A, Types ...) [with A = std::tuple<int, int>; Types = {std::tuple<const char*>, int}]'
main.cpp:16:59:   required from here
main.cpp:11:31: error: no matching function for call to 'get(int&)'
     std::cout << std::get<0>(a);
                               ^
main.cpp:11:31: note: candidates are:
In file included from /usr/include/c++/4.8/tuple:38:0,
                 from main.cpp:1:
/usr/include/c++/4.8/utility:142:5: note: template<long unsigned int _Int, class _Tp1, class _Tp2> constexpr typename std::tuple_element<_Int, std::pair<_Tp1, _Tp2> >::type& std::get(std::pair<_Tp1, _Tp2>&)
     get(std::pair<_Tp1, _Tp2>& __in) noexcept
     ^
/usr/include/c++/4.8/utility:142:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'std::pair<_Tp1, _Tp2>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from /usr/include/c++/4.8/tuple:38:0,
                 from main.cpp:1:
/usr/include/c++/4.8/utility:147:5: note: template<long unsigned int _Int, class _Tp1, class _Tp2> constexpr typename std::tuple_element<_Int, std::pair<_Tp1, _Tp2> >::type&& std::get(std::pair<_Tp1, _Tp2>&&)
     get(std::pair<_Tp1, _Tp2>&& __in) noexcept
     ^
/usr/include/c++/4.8/utility:147:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'std::pair<_Tp1, _Tp2>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from /usr/include/c++/4.8/tuple:38:0,
                 from main.cpp:1:
/usr/include/c++/4.8/utility:152:5: note: template<long unsigned int _Int, class _Tp1, class _Tp2> constexpr const typename std::tuple_element<_Int, std::pair<_Tp1, _Tp2> >::type& std::get(const std::pair<_Tp1, _Tp2>&)
     get(const std::pair<_Tp1, _Tp2>& __in) noexcept
     ^
/usr/include/c++/4.8/utility:152:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'const std::pair<_Tp1, _Tp2>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from /usr/include/c++/4.8/tuple:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/array:268:5: note: template<long unsigned int _Int, class _Tp, long unsigned int _Nm> constexpr _Tp& std::get(std::array<_Tp, _Nm>&)
     get(array<_Tp, _Nm>& __arr) noexcept
     ^
/usr/include/c++/4.8/array:268:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'std::array<_Tp, _Nm>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from /usr/include/c++/4.8/tuple:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/array:277:5: note: template<long unsigned int _Int, class _Tp, long unsigned int _Nm> constexpr _Tp&& std::get(std::array<_Tp, _Nm>&&)
     get(array<_Tp, _Nm>&& __arr) noexcept
     ^
/usr/include/c++/4.8/array:277:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'std::array<_Tp, _Nm>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from /usr/include/c++/4.8/tuple:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/array:285:5: note: template<long unsigned int _Int, class _Tp, long unsigned int _Nm> constexpr const _Tp& std::get(const std::array<_Tp, _Nm>&)
     get(const array<_Tp, _Nm>& __arr) noexcept
     ^
/usr/include/c++/4.8/array:285:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'const std::array<_Tp, _Nm>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from main.cpp:1:0:
/usr/include/c++/4.8/tuple:757:5: note: template<long unsigned int __i, class ... _Elements> constexpr typename std::__add_ref<typename std::tuple_element<__i, std::tuple<_Elements ...> >::type>::type std::get(std::tuple<_Elements ...>&)
     get(tuple<_Elements...>& __t) noexcept
     ^
/usr/include/c++/4.8/tuple:757:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'std::tuple<_Elements ...>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from main.cpp:1:0:
/usr/include/c++/4.8/tuple:764:5: note: template<long unsigned int __i, class ... _Elements> constexpr typename std::__add_c_ref<typename std::tuple_element<__i, std::tuple<_Elements ...> >::type>::type std::get(const std::tuple<_Elements ...>&)
     get(const tuple<_Elements...>& __t) noexcept
     ^
/usr/include/c++/4.8/tuple:764:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'const std::tuple<_Elements ...>' and 'int'
     std::cout << std::get<0>(a);
                               ^
In file included from main.cpp:1:0:
/usr/include/c++/4.8/tuple:771:5: note: template<long unsigned int __i, class ... _Elements> constexpr typename std::__add_r_ref<typename std::tuple_element<__i, std::tuple<_Elements ...> >::type>::type std::get(std::tuple<_Elements ...>&&)
     get(tuple<_Elements...>&& __t) noexcept
     ^
/usr/include/c++/4.8/tuple:771:5: note:   template argument deduction/substitution failed:
main.cpp:11:31: note:   mismatched types 'std::tuple<_Elements ...>' and 'int'
     std::cout << std::get<0>(a);
                               ^
